# link42

./: .dockerignore  .gitignore  Dockerfile.controller  README.md  pyproject.toml
apps/agent/: agent_entry.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  (+1 more)
deploy/: docker-compose.yml
deploy/sh/: link42-agent.sh
deploy/systemd/: link42-agent.service  link42-api.service
docs/: agent-binary-build.md  agent-public-deployment.md  agent-versioning-and-upgrade.md  architecture.md  bugfix-handoff.md  connection-middleware-plugins.md  handoff-memory.md  operations-notes.md  project-decisions.md  project-structure.md  release-build-and-push.md  testing-guide.md
local-demo/: wg0.conf.example
scripts/: README.md  build-agent-x64.sh  release-all.sh  release.env  release.env.example  smoke-real-local.sh
scripts/agent/: README.md  build-source.sh  build-x64.sh  prepare-release-assets.sh  publish-public-assets.sh
scripts/controller/: README.md  build-image.sh  export-image.sh  publish-dockerhub.sh  push-image.sh
scripts/e2e/: README.md  bootstrap-playwright.sh  run-playwright.sh
scripts/real-e2e/: README.md  down.sh  env.example  status.sh  up.sh
tests/: test_agent_system.py  test_point_to_point_rules.py  test_wireguard_parser.py
udp2raw_sh/: udp2raw.sh
udp2raw_sh/systemd/: README.md  udp2raw-client@.service  udp2raw-server@.service  udp2raw-systemd
udp2raw_sh/udp2raw_bin/: udp2raw_arm_asm_aes  udp2raw_mips24kc_be  udp2raw_mips24kc_be_asm_aes  udp2raw_mips24kc_le  udp2raw_mips24kc_le_asm_aes
(+18 files in other folders)
