[project]
name = "link42"
version = "0.2.0"
description = "Lightweight WireGuard link management panel"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "apps/api",
  "apps/agent",
  "packages",
]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["apps/api", "apps/agent", "packages"]
